# noether

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: CI.yml
examples/: cyclic_group.rs  finite_field.rs  finite_prime_field.rs  polynomial_ring.rs  quaternion.rs  set_join_semilattice.rs  vector_space.rs
src/: abelian.rs  commutative_ring.rs  concrete.rs  concrete_finite.rs  concrete_polynomial.rs  dimensions.rs  euclidean_domain.rs  extension_tower.rs  field.rs  field_extension.rs  fields.rs  finite_field.rs  group.rs  groups.rs  integral_domain.rs  lib.rs  linear.rs  magma.rs  monoid.rs  operations.rs  operator.rs  pid.rs  primitives.rs  real_field.rs  ring.rs  rings.rs  semigroup.rs  semiring.rs  set.rs  sets.rs  spaces.rs  tensors.rs  ufd.rs
